post: fix code blocks, mobile horizontal scroll

--- a/_scss/_post.scss
+++ b/_scss/_post.scss
@@ -44,6 +44,12 @@
     width: calc(100% + 7.2rem);
     margin-left: rem(-36px);
     height: auto;
+    
+    @media (max-width: $reference-width-xs-until) {
+      border-width: rem(20px);
+      width: calc(100% + 2rem);
+      margin-left: rem(-18px);
+    }
   }
   
   pre.highlight {
@@ -52,5 +58,20 @@
     margin-right: rem(-18px);
     margin-top: 1.5em;
     margin-bottom: 1.5em;
+    
+    -webkit-overflow-scrolling: touch;
+    
+    @media (max-width: $reference-width-xs-until) {
+      margin-left: 0;
+      margin-right: 0;
+    }
+    
+    @media (min-width: ($reference-width-xs-until + 1px)) and (max-width: $reference-width-md-until) {
+      margin-right: rem(-175px);
+    }
+    
+    @media (min-width: $reference-width-md-until + 1px) {
+      margin-right: rem(-275px);
+    }
   }
 }
